<?xml version="1.0"?>
<package format="2">
  <name>pioneer_mrs</name>
  <version>1.4.0</version>
  <description>The pioneer_mrs ROS package for Pioneer 3-AT Multi-Robot Systems</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="hteng007@ucr.edu">Hanzhe Teng</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">http://wiki.ros.org/pioneer_mrs</url>
  <url type="bugtracker">https://github.com/hanzheteng/pioneer_mrs/issues</url> 

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="hteng007@ucr.edu">Hanzhe Teng</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <!-- Use build_depend for packages you need at compile time: -->

  <!-- Use build_export_depend for packages you need in order to build against this package: -->

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Use exec_depend for packages you need at runtime: -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The following packages do not have binary release available in Ubuntu (i.e. cannot be installed by apt-get) -->
  <!-- Therefore, they cannot be added into rosdep as keys. -->
  <!-- However, we can install them from source by using wstool and dependencies.rosinstall -->
  <!-- <exec_depend>rosaria</exec_depend> -->
  <!-- <exec_depend>vicon_bridge</exec_depend> -->
  <!-- <exec_depend>amr_robots_gazebo</exec_depend> -->
  <!-- <exec_depend>amr_robots_description</exec_depend> -->

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
